# 3d_renderer

./: CMakeLists.txt  main.cpp
renderer/: CMakeLists.txt  camera.cpp  camera.h  geometry.cpp  geometry.h  objects.cpp  objects.h  renderer.cpp  renderer.h  view_box.cpp  view_box.h
